@@ -11,6 +11,8 @@ import lombok.EqualsAndHashCode;
 import lombok.ToString;
 import lombok.extern.slf4j.Slf4j;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.BlockingQueue;
 
@@ -40,12 +42,12 @@ public class SampleService2Impl implements SampleService2, SampleService {
 
     @Override
     public String testObjectArray(SomeData[] in) {
-        return "SampleService2Impl ->" + List.of(in);
+        return "SampleService2Impl ->" + Arrays.asList(in);
     }
 
     @Override
     public List<SomeData> testObjectList(List<SomeData> in) {
-        return List.of();
+        return Collections.emptyList();
     }
 
     @Override
